# couch-commander

./: .gitignore  Makefile  README.md  flake.nix  generated-sources.json  io.github.wh1le.CouchCommander.desktop  io.github.wh1le.CouchCommander.metainfo.xml  io.github.wh1le.CouchCommander.yml  lgtv_remote.py  pyproject.toml
.github/workflows/: flatpak.yml
lib/: __init__.py  app.py  config.py  connection.py  discovery.py  helpers.py
tests/: test_app.py  test_config.py  test_connection.py  test_discovery.py
