[tool.poetry]
name = "couch-commander"
version = "0.1.0"
description = "GTK4 remote for LG webOS TVs — command your TV from the couch"
authors = ["wh1le"]
packages = [{include = "lib"}, {include = "lgtv_remote.py"}]

[tool.poetry.dependencies]
python = "^3.12"
aiowebostv = "*"

[tool.poetry.scripts]
couch-commander = "lgtv_remote:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
